--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         ScaffoldingAddons.run(scaffolding, {"gamepad":false,"pointerlock":false,"specialCloudBehaviors":false,"pause":true});
       }
 
-      for (const extension of []) {
+      for (const extension of ["https://mikedev101.github.io/cloudlink/B3-0.js"]) {
         vm.extensionManager.loadExtensionURL(extension);
       }
 
