--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- We only include this to explicitly loosen the CSP of various packager environments. It does not provide any security. -->
   <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: blob:">
   <title>Meower</title>
+  <link rel="shortcut icon" href="assets/77336943.png" type="image/x-icon">
   <style>
     body {
       color: #ffffff;
