--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       scaffolding.setUsername("player####".replace(/#/g, () => Math.floor(Math.random() * 10)));
       scaffolding.setAccentColor("#ff4c4c");
 
-      scaffolding.addCloudProvider(new Scaffolding.Cloud.WebSocketProvider("wss://clouddata.turbowarp.xyz", "p4-@Meower Beta Test 4.8.sb3"));
+      scaffolding.addCloudProvider(new Scaffolding.Cloud.WebSocketProvider("wss://clouddata.turbowarp.xyz", ""));
 
       vm.setTurboMode(false);
       if (vm.setInterpolation) vm.setInterpolation(false);
